--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="즐거운 여행을 함께 할 동행과 요즘 뜨는 핫스팟을 찾아보실 수 있습니다." />
+    <meta property="og:title" content="Amigo Signal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.amigo-signal.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2021&q=80" />
+    <meta property="og:description" content="여행의 즐거움을 함께 나눌 동행을 찾고, 나만의 특별한 스팟을 공유해보세요." />
+    <meta property="og:site_name" content="Amigo Signal" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
